# trident

./: .gitignore  .travis.yml  Cargo.toml  assemble.ps1  assemble.rs  assemble.sh  build.rs  lib.rs  readme.md  rustfmt.toml  target.json
.cargo/: config.toml
.github/: code_of_conduct.md  contributing.md  dependabot.yml  security.md
alloc/: Cargo.toml  access.rs  alloc.rs  array.rs  bitflags.rs  boobs.rs  cell.rs  collections.rs  ece.rs  env.rs  error.rs  fmt.rs  hash.rs  lib.rs  math.rs  mmio.rs  ptr.rs  string.rs  uart.rs  unique.rs  volatile.rs  world.rs
alloc/.fmt/: error.rs  read.rs  write.rs
alloc/alloc/: allocator.rs  context.rs  ctx.rs  engine.rs  entity.rs  global.rs  heap.rs  layout.rs  page.rs  system.rs  world.rs
alloc/alloc/allocator/: #linked_list.rs  global.rs  heap.rs  layout.rs  linked_list.rs  slab.rs
alloc/alloc/page/: entry.rs  table.rs
alloc/array/: raw_array.rs  small_array.rs
alloc/collections/: hash_map.rs  hash_set.rs
alloc/ece/: component.rs  entity.rs
alloc/fmt/: error.rs  result.rs  rt.rs  write.rs
alloc/hash/: adler.rs  murmur.rs  sip.rs
alloc/ptr/: shared.rs
allocator/: Cargo.toml
allocator/src/: lib.rs
allocator/src/Allocator/: linked_list.rs
asm/: boot.S
boot/: Cargo.toml  build.rs  lib.rs  main.rs  trap.rs
boot/asm/: asm.S  boot.S
boot/scripts/: link.ld
ci/: install.sh  script.sh
console/: Cargo.toml  colour.rs  con.rs  lib.rs  panic.rs  text.rs  write.rs
core/: Cargo.toml  error.rs  lib.rs
kernel/: Cargo.toml  asm.rs  console.rs  io.rs  lib.rs  panic.rs
kernel/asm/: trap.S
kernel/console/: colour.rs  text.rs  write.rs
kernel/io/: mmio.rs
macros/: Cargo.toml  lib.rs
panic/: Cargo.toml  lib.rs
system/: Cargo.toml  fmt.rs  lib.rs  string.rs
