[package]
name = "t_alloc"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>", "ShockEMP/Static <meakoda2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[lib]
name = "t_alloc"
path = "lib.rs"
