[package]
name = "t_alloc"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>", "ShockEMP/Static <meakoda2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = { version = "0.8.8", features = ["use_spin", "alloc_ref"] }
spin = "0.7.0"
volatile = "0.2.6"

[dev-dependencies]
trident-sys = { path = "../system", version = "*" }

[lib]
name = "t_alloc"
path = "lib.rs"
