[package]
name = "trident-alloc"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = { version = "0.8", features = ["use_spin"] }
mopa = { version = "0.2", features = ["no_std"] }
spin = "0.7.1"
volatile = "0.4.4"

[dev-dependencies]
trident-sys = { path = "../system", version = "*" }

[lib]
name = "t_alloc"
path = "lib.rs"
