[package]
name = "t_boot"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[[bin]]
name = "t_bootloader"
path = "main.rs"

[lib]
name = "t_bootimg"
path = "lib.rs"
