[package]
name = "t_boot"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
r0 = "1.0.0"
riscv = "0.6.0"
t_macros = { path = "../macros", version = "0.1" }

[build-dependencies]
riscv-target = "0.1.2"

[lib]
name = "t_boot"
path = "lib.rs"
