[package]
name = "t_console"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.7.1"
volatile = "0.4.3"

[lib]
name = "t_console"
path = "lib.rs"
