[package]
name = "trident-console"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
spin = "0.9.0"
trident-alloc = { path = "../alloc", version = "*" }
volatile = "0.4.3"

[lib]
name = "t_console"
path = "lib.rs"
