[package]
name = "trident-core"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trident-alloc = { path = "../alloc", version = "0.1.0" }
backtracer = { git = "https://github.com/gz/backtracer", version = "0.0.2" }

[lib]
name = "t_core"
path = "lib.rs"
