[package]
name = "t_xkernel"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"
build = "../assemble.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
t_boot      = { path = "../boot", version = "0.1" }
trident-sys = { path = "../system", version = "0.1" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[lib]
name = "t_xkernel"
path = "lib.rs"
crate_type = ["staticlib"]
