[package]
name = "trident-kernel"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trident-boot      = { path = "../boot", version = "0.1" }
trident-sys = { path = "../system", version = "0.1" }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

[lib]
name = "t_kernel"
path = "lib.rs"
crate-type = ["staticlib"]
