[package]
name = "t_macros"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = "1.0.24"
quote = "1.0.8"

[dependencies.rand]
version = "0.8.2"
default-features = false
features = ["small_rng"]

[dependencies.syn]
version = "1.0"
features = ["extra-traits", "full"]

[lib]
name = "t_macros"
path = "lib.rs"
proc-macro = true
