[package]
name = "t_paniclib"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
t_consolelib = { path = "../console", version = "*" }

[lib]
name = "t_panic"
path = "lib.rs"