[package]
name = "trident-sys"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
t_alloc   = { path = "../alloc", version = "*"}
t_console = { path = "../console", version = "*" }

[lib]
name = "t_sys"
path = "lib.rs"
