[package]
name = "trident-sys"
version = "0.1.0"
authors = ["Mnimi Aionios <mechild02@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
trident-alloc   = { path = "../alloc", version = "*"}
trident-console = { path = "../console", version = "*" }
trident-core = { path = "../core", version = "*" }

[lib]
name = "t_system"
path = "lib.rs"
crate-type = ["staticlib"]
